ingress-canary/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-prod
  namespace: default
  labels:
    server: web
    version: prod
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    server: web
    version: prod
