ingress-canary/ingress-gray.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gray
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: web.sundayhk.com
    http:
      paths:
      - backend:
          service:
            name: web-gray
            port:
              number: 80
        path: /
        pathType: Prefix
